# dist

./: .gitignore  .gitmodules  Cargo.toml  RouterConfig.toml  WorkerConfig.toml  build-flatbuffers.sh
capnp/: dist.capnp  dist_capnp.rs  router.capnp  router_capnp.rs
dist-data/: Cargo.toml  build.rs
dist-data/capnp/: dist_capnp.rs
dist-data/src/: entity.rs  lib.rs  macro_traits.rs  storage.rs
dist-gen/: Cargo.toml
dist-gen/src/: lib.rs
dist-gen/tests/: reflection.rs
dist-macro/: Cargo.toml
dist-macro/src/: lib.rs
dist-router/: Cargo.toml  build.rs
dist-router/src/: lib.rs  router.rs  worker.rs
dist-services/: Cargo.toml
dist-services/examples/: all.rs
dist-services/src/: lib.rs  macros.rs
dist-services/src/router/: mod.rs  rpc.rs
dist-services/src/worker/: mod.rs  rpc.rs
dist-test/: Cargo.toml  build.rs
dist-test/examples/: router.rs  worker.rs
dist-test/schema/components/: second_component.fbs  test_component.fbs
dist-test/src/: main.rs  rpc_test.rs
schema/: base_component.bfbs  base_component.fbs  base_component_generated.rs  reflection_generated.rs
