[package]
name = "dist-data"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"

[dependencies]
redis = { path = "../redis-rs", features = ["with-unix-sockets"] }
failure = "*"
derive_more = "*"
log = "*"

[build-dependencies]
capnpc = { path = "../../capnproto-rust/capnpc" }


[lib]
path = "src/lib.rs"