[package]
name = "dist-router"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"

[dependencies]
capnp = { path = "../../capnproto-rust/capnp", features = ["rpc_try"] }
capnp-rpc = { path = "../../capnproto-rust/capnp-rpc" }
dist-data = { path = "../dist-data" }
dist-macro = { path = "../dist-macro" }
failure = "*"
futures = "0.1.25"
derive_more = "*"
log = "*"

[build-dependencies]
capnpc = { path = "../../capnproto-rust/capnpc" }

[dev-dependencies]
tokio = { version = "*", features = ["async-await-preview"] }
tokio-async-await = "*"
env_logger = "*"

[lib]
path = "src/lib.rs"