[package]
name = "dist-services"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"

[dependencies]
dist-data = { path = "../dist-data" }

failure = "*"
derive_more = "*"

#slog = "*"
#slog-term = "*"
#slog-scope = "*"
#slog-stdlog = "*"
#slog-async = "*"

env_logger = "*"

futures-preview = { version = "0.3.0-alpha.12", features = ["compat", "tokio-compat"] }
pin-utils = "0.1.0-alpha.4"
serde = { version = "^1.0.63", features = ["rc"] }

# Migrate tarpc to grpc
tarpc = { git = "https://github.com/google/tarpc.git", features = ["serde1"] }
#romio-bincode-transport = { path = "../../romio-bincode-transport" }
tarpc-bincode-transport = { git = "https://github.com/google/tarpc.git" }

tokio = "*"
tokio-executor = "*"
tokio-tcp = "*"
log = "*"

config = "*"

nalgebra = { version = "*", features = ["serde-serialize"] }

[build-dependencies]
capnpc = { path = "../../capnproto-rust/capnpc" }

[dev-dependencies]


[lib]
path = "src/lib.rs"